compiler/testData/diagnostics/tests/enum/interfaceWithEnumKeyword.fir.kt
<!WRONG_MODIFIER_TARGET!>enum<!> interface Some {
    // Enum part
    D;

    // Interface like part
    fun test()
    konst foo: Int
}
